# rusted

./: .gitignore  README.md  package-lock.json  package.json  setup.bat  tailwind.config.js
src/: App.css  App.tsx  SnipOverlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  lib.rs  main.rs
