[package]
name = "rusted"
version = "0.1.0"
description = "A screen recorder app"
authors = ["Angelo Araya Villanueva"]
edition = "2021"

[lib]
name = "rusted_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-shell = "2.0"
crabgrab = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.3"
hound = "3.5"
